--- a/package.json
+++ b/package.json
@@ -1,51 +1,38 @@
 {
   "name": "advanced-trading-platform",
-  "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "server": "node server.js",
-    "dev:all": "node server.js & vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "worker": "node background-worker.js",
+    "server": "node server.js"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
-    "axios": "^1.13.4",
+    "axios": "^1.13.5",
     "chart.js": "^4.5.1",
-    "clsx": "^2.1.1",
-    "cors": "^2.8.6",
-    "date-fns": "^4.1.0",
-    "dotenv": "^17.2.3",
-    "express": "^5.2.1",
-    "firebase": "^12.8.0",
-    "framer-motion": "^12.29.2",
-    "lightweight-charts": "^5.1.0",
-    "lucide-react": "^0.563.0",
-    "react": "^19.2.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.1",
+    "express": "^4.18.2",
+    "firebase": "^10.8.0",
+    "firebase-admin": "^12.0.0",
+    "lightweight-charts": "^4.1.1",
+    "lucide-react": "^0.316.0",
+    "node-fetch": "^3.3.2",
+    "react": "^18.2.0",
     "react-chartjs-2": "^5.3.1",
-    "react-dom": "^19.2.4",
+    "react-dom": "^18.2.0",
     "react-paystack": "^6.0.0",
-    "react-router-dom": "^7.13.0",
-    "recharts": "^3.7.0"
+    "react-router-dom": "^6.22.0",
+    "recharts": "^3.7.0",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.39.1",
-    "@types/react": "^19.2.5",
-    "@types/react-dom": "^19.2.3",
-    "@vitejs/plugin-react": "^5.1.1",
-    "eslint": "^9.39.1",
-    "eslint-plugin-react-hooks": "^7.0.1",
-    "eslint-plugin-react-refresh": "^0.4.24",
-    "globals": "^16.5.0",
-    "vite": "^7.2.4"
-  },
-  "overrides": {
-    "react-paystack": {
-      "react": "$react",
-      "react-dom": "$react-dom"
-    }
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
+    "@vitejs/plugin-react": "^4.2.1",
+    "vite": "^5.0.12"
   }
 }
