--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^10.8.0",
     "firebase-admin": "^12.0.0",
     "framer-motion": "^12.34.0",
+    "jsonwebtoken": "^9.0.3",
     "lightweight-charts": "^4.1.1",
     "lucide-react": "^0.316.0",
     "node-fetch": "^3.3.2",
