--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.2.1",
     "firebase": "^10.8.0",
     "firebase-admin": "^12.0.0",
     "framer-motion": "^12.34.0",
+    "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.3",
     "lightweight-charts": "^4.1.1",
     "lucide-react": "^0.316.0",
